# TAP2Diag

./: README.MD  pyproject.toml
src/: tap2diag.py
src/TAP2Diag/: __init__.py  __main__.py  parseArguments.py  tap2diag.py
tests/TestData/: tap.md
