[build-system]
requires = ["setuptools >=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tap2diag"
version = "0.0.0a0"
description = "Coverts a DC TAP to Mermaid diagram code."
readme = "README.MD"
authors = [{name = "Phil Barker", email="phil.barker@pjjk.co.uk"}]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
]
license = { file = "LICENSE" }
keywords = ["RDF", "metadata application profile", "SHACL"]
dependencies = [
    "tap2shacl ==1.0.0b1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest >= 6.2",
    "black >= 21.6b0",
]

[project.urls]
Homepage = "https://github.com/philbarker/TAP2SHACL/"

[project.scripts]
tap2shacl = "tap2shacl.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
minversion = "6.0"
testpaths = [
    "tests",
]
